--- a/style.css
+++ b/style.css
@@ -6,14 +6,27 @@ body {
   overflow: hidden;
   margin: 15;
   padding: 0;
-  /* background-image: url("./img/signature\ white\ tee\ model.jpg"); */
-  /* background-image: url("./img/cover_cut.png"); */
-  /* background-image: url("./img/cover_cut2.png"); */
-  /* background-image: url("./img/cover_cut3.png"); */
-  /* background-image: url("./img/cover_cut4.png"); */
+  /* Location of the image */
   background-image: url("./img/cover_final.png");
+  
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
+  
+  /* Background image doesn't tile */
   background-repeat: no-repeat;
+  
+  /* Background image is fixed in the viewport so that it doesn't move when 
+     the content's height is greater than the image's height */
+  background-attachment: fixed;
+  
+  /* This is what makes the background image rescale based
+     on the container's size */
   background-size: cover;
+  
+  /* Set a background color that will be displayed
+     while the background image is loading */
+  background-color: #464646;
+
 }
 #main {
   margin: 0;
